--- a/style.css
+++ b/style.css
@@ -1,3 +1,117 @@
+
+a[data-lightbox] {
+    position: relative;
+    display: block;
+    text-align: center;
+}
+
+a[data-lightbox]:hover::before {
+    content: "+";
+    font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial;
+    font-size: 32px;
+    width: 50px;
+    height: 50px;
+    margin-left: -25px;
+    border-radius: 50%;
+    background: rgba(0, 0, 0, .6);
+    color: #FFF;
+    font-weight: 100;
+    z-index: 1;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+}
+
+a[data-lightbox]:hover img {
+    opacity: 0.6;
+    -webkit-animation-fill-mode: none;
+    animation-fill-mode: none;
+}
+
+#lightbox-modal {
+    display: flex;
+    align-items: center;
+}
+
+#lightbox-modal .modal-dialog {
+    width: 90%;
+    max-width: 900px;
+    margin: 0 auto 0;
+}
+
+#lightbox-modal .modal-dialog img {
+    height: 60vh;
+    margin: 0 auto;
+}
+
+.lightbox-caption {
+    padding: 20px;
+    color: #FFF;
+    background: rgba(0, 0, 0, .5);
+    position: absolute;
+    left: 15px;
+    right: 15px;
+    bottom: 5px;
+}
+
+.close-lightbox {
+    color: #FFF;
+    font-size: 30px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    z-index: 20;
+    background: rgba(0, 0, 0, .5);
+    border: none;
+    line-height: 30px;
+    padding: 0 9px 5px;
+    opacity: 0.3;
+}
+
+.close-lightbox:hover,
+.next-lightbox:hover,
+.prev-lightbox:hover {
+    opacity: 1.0;
+    color: #FFF;
+}
+
+.next-lightbox,
+.prev-lightbox {
+    font-size: 20px;
+    color: rgba(255, 255, 255, .9);
+    background: rgba(0, 0, 0, .5);
+    transition: all .2s ease-in-out;
+    position: absolute;
+    top: 45%;
+    z-index: 1;
+    opacity: 0.4;
+}
+
+.next-lightbox {
+    padding: 6px 8px 1px 13px;
+    right: 25px;
+}
+
+.prev-lightbox {
+    padding: 6px 13px 1px 10px;
+    left: 25px;
+}
+
+.snapshot-lb .modal-body {
+    padding-bottom: 45px;
+}
+
+.snapshot-lb .lightbox-caption {
+    padding: 0;
+    color: rgba(0, 0, 0, .5);
+    background: none;
+} 
+
+.img-responsive {
+    margin: auto;
+}
+
 /*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*/
 /*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*/
 /*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*//*///// body /////*/
@@ -93,6 +207,7 @@ a, button {
 .header {
     width: 100%; height: 95px;
     padding-top: 20px;
+    background-color: #FFFF;
 }
 
 .navbar {
@@ -171,7 +286,7 @@ a, button {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url("img/image-de-presentation.jpg");
+    background-image: url("img/image-de-presentation.bmp");
     background-attachment: fixed;
     background-size: cover;
 }
@@ -266,20 +381,21 @@ a, button {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
-.header--contact {
-    width: 30%;
-    margin: 40px 0px;
-    background-color: #FFFF;
-    box-shadow: 0px 0px 4px #162339;
-    border-top-right-radius: 50px;
-    border-bottom-right-radius: 50px;
+.aside__containerContact {
+    margin-top: 20px;
 }
 
 .section__formContact {
-    width: 80%;
-    padding: 40px;
+    width: 90%; max-width: 800px;
+    padding: 20px 10px 40px 10px;
+}
+
+[type="submit"] {
+    background-color: #F4AB89;
 }
 
 [type="submit"]:hover {
@@ -335,6 +451,7 @@ a, button {
         text-align: left;
         padding-left: 15px;
         width: 100%;
+        z-index: 3;
     }
     .nav > li:hover {
         background: rgba(0, 0, 0, .08);
