--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@ h1, h2, h3, h4 {
 }
 .btn:hover {
     background: #162339c5;
+    color: #FFFF;
     box-shadow: 0px 0px 6px #FFFF;
 }
 .btn--link:hover .btn{
@@ -86,7 +87,7 @@ a, button {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url(./img/agence-la-panthere.webp);
+    background-image: url(./img/agence-la-panthere.jpg);
     background-attachment: fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -124,7 +125,7 @@ a, button {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url("img/image-de-presentation.webp");
+    background-image: url("img/image-de-presentation.jpg");
     background-attachment: fixed;
     background-size: cover;
 }
@@ -256,7 +257,7 @@ a[data-lightbox]:hover img {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-image: url("img/agence-la-panthere.webp");
+    background-image: url("img/agence-la-panthere.jpg");
     background-size: cover;
     background-repeat: no-repeat;
 }
