--- a/style.css
+++ b/style.css
@@ -23,8 +23,15 @@ h1, h2, h3, h4 {
     text-align: center;
     font-weight: 700;
 }
-.txt {
+.txt--bold {
     font-weight: 400;
+}
+.txt--justify {
+    text-align: justify;
+}
+.text-center {
+    display: inline-block;
+    width: 100%;
 }
 .txt--orange {
     color: #F3976C;
@@ -151,6 +158,12 @@ a, button {
 .container__portfolio {
     max-width: 600px;
     margin: auto;
+
+}
+.container__portfolio div a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 a[data-lightbox] {
     position: relative;
@@ -257,6 +270,7 @@ a[data-lightbox]:hover img {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 0px 20px;
     background-image: url("img/agence-la-panthere.jpg");
     background-size: cover;
     background-repeat: no-repeat;
@@ -276,7 +290,7 @@ a[data-lightbox]:hover img {
     display: flex;
     flex-direction: column;
     justify-content:space-around;
-    padding: 40px 0px;
+    padding: 40px 20px;
     background-color: #F4AB89;
 }
 .footer h2 {
@@ -296,11 +310,33 @@ a[data-lightbox]:hover img {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-left: 10px;
-    padding-right: 10px;
 }
 .aside__containerContact {
-    margin-top: 20px;
+    width: 100%; height: 200px;
+    padding: 0px 20px;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-image: url("img/agence-la-panthere.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+.aside__containerContact::after {
+    content: '';
+    width: 100%; height: 100%;
+    position: absolute;
+    background-color: #162339c5;
+}
+.aside__containerContact h1 {
+    font-size: 22px;
+    z-index: 1;
+}
+.aside__containerContact h2 {
+    font-size: 14px;
+    padding: 0% 40px;
+
 }
 .section__formContact {
     width: 90%; max-width: 800px;
